feat(6xForms) message wording (#1230)